--- a/css/main.css
+++ b/css/main.css
@@ -195,10 +195,13 @@ div.button div.cooldown {
 /* Up/Down buttons. They're complicated! */
 
 .upBtn, .dnBtn, .maxBtn, .zeroBtn {
-	position: absolute;
-	width: 14px;
-	height: 15px;
+  border: 1px solid #000;
+	width: 20px;
+	height: 20px;
 	cursor: pointer;
+  text-align: center;
+  line-height: 20px;
+  display: inline-block;
 }
 
 .upBtn, .dnBtn {
@@ -211,83 +214,19 @@ div.button div.cooldown {
 
 .upBtn.disabled, .dnBtn.disabled, .maxBtn.disabled, .zeroBtn.disabled {
 	cursor: default;
+  color: #ccc;
 }
 
 .upBtn {
-	top: -2px;
 }
 
 .maxBtn {
-    top: -2px;
 }
-
-.upBtn:after, .upBtn:before, .maxBtn:after, .maxBtn:before {
-	position: absolute;
-	border: medium solid transparent;
-	content: " ";
-	height: 0;
-	width: 0;
-	bottom: 4px;
-}
-
-.upBtn:after, .maxBtn:after {
-	border-color: transparent transparent white;
-}
-
-.upBtn:before, .maxBtn:before {
-	border-color: transparent transparent black;
-}
-
-.upBtn.disabled:before, .maxBtn.disabled:before {
-	border-color: transparent transparent #999;
-}
-
 
 .dnBtn {
-	bottom: -3px;
 }
 
 .zeroBtn {
-    bottom: -3px;
-}
-
-.dnBtn:after, .dnBtn:before, .zeroBtn:after, .zeroBtn:before {
-	position: absolute;
-	border: medium solid transparent;
-	content: " ";
-	height: 0;
-	width: 0;
-	top: 4px;
-}
-
-.upBtn:after, .dnBtn:after {
-	border-width: 3px;
-	left: 50%;
-	margin-left: -3px;
-}
-
-.upBtn:before, .dnBtn:before, .maxBtn:before, .zeroBtn:before {
-	border-width: 5px;
-	left: 50%;
-	margin-left: -5px;
-}
-
-.maxBtn:after, .zeroBtn:after {
-	border-width: 2px;
-	left: 50%;
-	margin-left: -2px;
-}
-
-.dnBtn:after, .zeroBtn:after {
-	border-color: white transparent transparent;
-}
-
-.dnBtn:before, .zeroBtn:before {
-	border-color: black transparent transparent;
-}
-
-.dnBtn.disabled:before, .zeroBtn.disabled:before {
-	border-color: #999 transparent transparent;
 }
 
 div.button div.tooltip {
