--- a/css/outside.css
+++ b/css/outside.css
@@ -35,18 +35,20 @@ div#workers {
 	position:absolute;
 	top: -4px;
 	left: 160px;
-	width: 150px;
+	width: 250px;
 }
 
 .workerRow > .row_val {
 	position: relative;
-	padding-right: 20px;
 	-webkit-touch-callout: none;
 	-webkit-user-select: none;
 	-khtml-user-select: none;
 	-moz-user-select: none;
 	-ms-user-select: none;
 	user-select: none;
+}
+.workerRow > .row_val span {
+  margin-right: 1em;
 }
 
 .workerRow {
