Enable loading from a saved state
  - allows copy pasting of saves, easier dev, and portability.
  - TODO: allow export save as base64 string.
  - TODO: base64 encode it so cheating isnt as easy (read: tempting) (it will always be
    easy for those who care).

--- a/css/main.css
+++ b/css/main.css
@@ -59,6 +59,12 @@ div#header {
 	text-decoration: underline;	
 }
 
+.loadSave {
+	position: absolute;
+	right: 130px;
+	bottom: 10px;
+	cursor: pointer;
+}
 .share {
 	position: absolute;
 	right: 70px;
